--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ jdk:
   - oraclejdk8
 
 scala:
-  - 2.11.8
+  - 2.11.11
 
-script: sbt ++$TRAVIS_SCALA_VERSION clean coverage test
+script: sbt ++$TRAVIS_SCALA_VERSION clean coverageTest
 
 cache:
   directories:
@@ -15,7 +15,7 @@ cache:
   - $HOME/.sbt/boot/
   - $HOME/.zinc
 
-after_success: sbt ++$TRAVIS_SCALA_VERSION coverageReport coveralls
+after_success: sbt ++$TRAVIS_SCALA_VERSION travis-report
 
 before_cache:
   # Tricks to avoid unnecessary cache updates
